@@ -7,7 +7,8 @@ Go1 development version
 	- code.google.com/p/gorilla/schema
 	- code.google.com/p/gorilla/sessions
 	- code.google.com/p/gorilla/rpc
--
+- Mux:
+	- Dropped RouteVars type: use map[string]string directly.
 
 September 25, 2010
 ------------------
